--- a/GroceryApplication/pom.xml
+++ b/GroceryApplication/pom.xml
@@ -22,5 +22,15 @@
 			<artifactId>Automation</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi</artifactId>
+        <version>5.2.3</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>5.2.3</version>
+    </dependency>
   </dependencies>
 </project>
