--- a/GroceryApplication/pom.xml
+++ b/GroceryApplication/pom.xml
@@ -19,11 +19,11 @@
 			<version>7.10.2</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>com.automation</groupId>
 			<artifactId>Automation</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
